# GrokSearch

./: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml
src/grok_search/: http_server.py
