[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grok-search"
version = "0.1.0"
description = "MCP server for AI model search capabilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.2.4",
    "httpx[socks]>=0.28.0",
    "mcp[cli]>=1.27.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
grok-search = "grok_search.server:main"
grok-search-http = "grok_search.http_server:main"
